# executive-sql-to-text

./: .env.example  .gitignore  CLAUDE.md  CUSTOM_TRACER_GUIDE.md  LICENSE  PYTHON_ENV.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_api.py  run_frontend.py  run_gradio.py  run_gradio_app.py  verify_implementation.py
config/: agents.yaml  database.yaml
docker/postgres/: init.sql
docs/: feature_cycle.md
docs/features/: _index.md
docs/features/FEAT-001-core-db/: design.md  spec.md  status.md  tasks.md
docs/features/FEAT-002-auth/: design.md  spec.md  status.md  tasks.md
docs/features/FEAT-003-landing/: design.md  spec.md  status.md  tasks.md
docs/features/FEAT-004-gradio/: design.md  spec.md  status.md  tasks.md
docs/features/FEAT-005-deploy/: design.md  spec.md  status.md  tasks.md
docs/features/FEAT-006-data-ingest/: design.md  spec.md
docs/features/_template/: spec.md  status.md  tasks.md
frontend/: gradio_app.py  gradio_main.py  streamlit_app.py
scripts/: download_data.py  seed_database.py  start_api_with_langsmith.ps1  view_traces.py
src/: __init__.py
src/agents/: __init__.py  analyst_agent.py  base_agent.py  insight_agent.py  sql_agent.py  viz_agent.py
src/api/: __init__.py  auth.py  auth_schemas.py  connections.py  main.py  routes.py  schemas.py
src/auth/: __init__.py  dependencies.py  email.py  jwt.py  password.py
src/database/: __init__.py  connection.py  encryption.py  introspection.py  models.py
src/graph/: __init__.py  nodes.py  state.py  workflow.py
src/tools/: __init__.py  chart_generator.py  metric_calculator.py  sql_executor.py
src/utils/: __init__.py  custom_tracer.py  logging.py  metrics.py
tests/: test_workflow.py
tests/unit/: test_auth.py  test_connections_api.py  test_demo_query.py  test_encryption.py  test_introspection.py  test_sql_agent.py
traces/: trace_20260113_123436_019bb722.json  trace_20260113_123441_019bb722.json  trace_20260113_124250_019bb72a.json  trace_20260113_124256_019bb72a.json
